chandeliers-lus/tests/compile_fail/ui/causality/undeclared-const.rs
chandeliers_lus::decl! {
    const B: int = A;
}

fn main() {}
