chandeliers-lus/tests/compile_fail/ui/causality/undeclared-const.stderr
error: Variable A not found in the context.
 --> tests/compile_fail/ui/causality/undeclared-const.rs:2:20
  |
2 |     const B: int = A;
  |                    ^
  |
  = note: Perhaps you meant one of the local variables: (none declared)
  = note: or one of the global variables: (none declared)
